<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ntu.thumbsense.MainActivity">

    <TextView
        android:id="@+id/messageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="No Message yet"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

    <TextView
        android:id="@+id/ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/ip"
        android:layout_below="@+id/messageContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IPbutton"
        android:textSize="20sp"
        android:onClick="setIPDialog"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/ip" />

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ip"
        android:background="#efefef"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

    <Button
        android:id="@+id/interaction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:onClick="defineAction"
        android:tag="1"
        android:text="@string/interaction1"/>

    <Button
        android:id="@+id/interaction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/interaction1"
        android:layout_alignBottom="@+id/interaction1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="defineAction"
        android:tag="2"
        android:text="@string/interaction2" />

    <Button
        android:id="@+id/interaction3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/interaction1"
        android:layout_marginTop="16dp"
        android:onClick="defineAction"
        android:tag="3"
        android:text="@string/interaction3" />

    <Button
        android:id="@+id/interaction4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/interaction3"
        android:layout_alignBottom="@+id/interaction3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="defineAction"
        android:tag="4"
        android:text="@string/interaction4" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_blue_light_trans"
        android:orientation="vertical"
        android:visibility="invisible"
        android:onClick="endAction"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/mainContainer">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/text_light"/>

        <TextView
            android:id="@+id/progressMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar"
            android:layout_centerHorizontal="true"
            android:text="@string/waiting_text"
            android:textAlignment="center"/>

    </RelativeLayout>

</RelativeLayout>
